small fix CSS
signin loader was too close

--- a/app/styles/layout/signin.scss
+++ b/app/styles/layout/signin.scss
@@ -70,3 +70,7 @@
 		}
 	}
 }
+
+.wait-for-load {
+	padding-top: 50px;
+}
